# simple-calc

./: CMakeLists.txt  README.md  build.sh  project_plan.txt
include/: error.h  math_ops.h  parser.h
src/: error.c  math_ops.c  parser.c  simplecalc.c
tests/: test_math.c
